--- a/springboot/src/main/resources/templates/employeeList.html
+++ b/springboot/src/main/resources/templates/employeeList.html
@@ -8,7 +8,7 @@
     <h1>사원 등록 등록!!!</h1>
     <h3 th:text="${list.size()}"></h3>
     <hr>
-    <a href="http://localhost:8080/employeeRegister.html">사원 등록</a>
+    <a href="http://localhost:8080/employee.html">사원 등록</a>
 
     <hr>
     <table border="1">
