--- a/springboot/src/main/resources/templates/success.html
+++ b/springboot/src/main/resources/templates/success.html
@@ -7,6 +7,6 @@
 <body>
     <h1>사원 등록 성공!!!</h1>
     <hr>
-    <a href="http://localhost:8080/employee.html">홈</a>
+    <a href="http://localhost:8080/employee.html">HOME</a>
 </body>
 </html>
